--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="canonical" href="http://mattbrouss.github.io/">
   <link rel="alternate" type="application/rss+xml" title="Matthew Broussard" href="http://mattbrouss.github.io/feed.xml">
+<style>
+div.halfwidth{
+	width: 50%;
+}
+</style>
 </head>
 
 
@@ -51,6 +56,7 @@
     <div class="page-content">
       <div class="wrapper">
         <div class="home" style="line-height: 200%">
+		<div class="halfwidth">
 
 <p style="margin-top: 20px; line-height: 200%"> 
 I am a PhD student in mathematics at Washington State University. <a href="http://www.math.wsu.edu/math/faculty/bkrishna/">Bala Krishnamoorthy</a> is my advisor; currently, our projects include work on a multi-commodity max-flow min-cut theorem, collaborative work with <a href="https://crmj.wsu.edu/chair-faculty-graduate-students-and-staff/faculty/david-makin/">David Makin</a> on police integrity and uses of force, and generalizing the Mapper algorithm for use in, for example, recommendation systems.
@@ -64,6 +70,7 @@ In addition to my research at WSU, I participated in internships with the <a hre
 <p style="margin-top: 30px;"><b>Email: </b><a href="mailto:matthew.broussard@wsu.edu">matthew.broussard@wsu.edu</a> 
 <div style="float: right; margin-top: -50px;">
 	<a href="https://www.linkedin.com/in/matthew-broussard/"><b>LinkedIn</b></a> | <a href="https://github.com/mattbrouss"><b>Github</b></a> | <a href="https://github.com/mattbrouss/mattbrouss.github.io/blob/master/monal-cv.pdf"><b>CV</b></a>
+</div>
 </div>
 
 </div>
