--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ In addition to my research at WSU, I participated in internships with the <a hre
 <div class="threequartwidth">
 <p style="margin-top: 30px;"><b>Email: </b><a href="mailto:matthew.broussard@wsu.edu">matthew.broussard@wsu.edu</a> 
 <div style="float: right; margin-top: -50px;">
-	<a href="https://www.linkedin.com/in/matthew-broussard/"><b>LinkedIn</b></a> | <a href="https://github.com/mattbrouss"><b>Github</b></a> | <a href="https://github.com/mattbrouss/mattbrouss.github.io/blob/master/monal-cv.pdf"><b>CV</b></a>
+	<a href="https://www.linkedin.com/in/matthew-broussard/"><b>LinkedIn</b></a> | <a href="https://github.com/mattbrouss"><b>Github</b></a> | <a href="https://github.com/mattbrouss/mattbrouss.github.io/blob/master/CV_Matthew_Broussard.pdf"><b>CV</b></a>
 </div>
 </div>
 
