--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ div.set-margin{
     <div class="page-content">
       <div class="wrapper">
         <div class="home" style="line-height: 200%">
-		<div class="fixedwidth">
+		<div class="halfwidth">
 
 <p style="margin-top: 20px; line-height: 200%"> 
 I am a PhD student in mathematics at Washington State University. <a href="http://www.math.wsu.edu/math/faculty/bkrishna/">Bala Krishnamoorthy</a> is my advisor; currently, our projects include work on a multi-commodity max-flow min-cut theorem, collaborative work with <a href="https://crmj.wsu.edu/chair-faculty-graduate-students-and-staff/faculty/david-makin/">David Makin</a> on police integrity and uses of force, and generalizing the Mapper algorithm for use in, for example, recommendation systems. I received my bachelors degree from Linfield College (now  <a href="https://www.linfield.edu">Linfield University</a>) in the spring of 2013.
@@ -84,8 +84,8 @@ In addition to my research at WSU, I participated in internships with the <a hre
 </div>
 
 <div class="set-margin">
-<p style="margin-top: 30px;"><b>Email: </b><a href="mailto:matthew.broussard@wsu.edu">matthew.broussard@wsu.edu</a> <span style="display:inline-block; width: 300px;"></span>
-	<a href="https://www.linkedin.com/in/matthew-broussard/"><b>LinkedIn</b></a> | <a href="https://github.com/mattbrouss"><b>Github</b></a> | <a href="https://github.com/mattbrouss/mattbrouss.github.io/blob/master/CV_Matthew_Broussard.pdf"><b>CV</b></a>
+<p style="margin-top: 30px;"><b>Email: </b><a href="mailto:matthew.broussard@wsu.edu">matthew.broussard@wsu.edu</a></p>
+<p> <a href="https://www.linkedin.com/in/matthew-broussard/"><b>LinkedIn</b></a> | <a href="https://github.com/mattbrouss"><b>Github</b></a> | <a href="https://github.com/mattbrouss/mattbrouss.github.io/blob/master/CV_Matthew_Broussard.pdf"><b>CV</b></a></p>
 </div>
 
 
