--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@ div.fixedwidth{
 	width: 500px;
 	margin-left: 5%;
 }
-div.threequartwidth{
-	width: 75%;
-	margin-left:5%;
+div.wide{
+	width: 80%;
+	margin-left:10%;
+	margin-right:10%;
 }
 div.set-margin{
-	margin-left: 5%;
-	margin-right: 5%;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 </style>
 </head>
@@ -37,12 +38,13 @@ div.set-margin{
 
   <body>
 
-    
+<div class="set-margin">    
 <div class="wrapper">
   <center> <h1><div class="site-title"><span title="/mow&middot;nuhl/"> Matthew Broussard </span></div></h1></center>
 </div>
 <div class="wrapper site-description">
 <center>  Graduate Student, Washington State University </center>
+</div>
 </div>
 
 <div class="set-margin">
@@ -72,7 +74,7 @@ div.set-margin{
     <div class="page-content">
       <div class="wrapper">
         <div class="home" style="line-height: 200%">
-		<div class="halfwidth">
+		<div class="wide">
 
 <p style="margin-top: 20px; line-height: 200%"> 
 I am a PhD student in mathematics at Washington State University. <a href="http://www.math.wsu.edu/math/faculty/bkrishna/">Bala Krishnamoorthy</a> is my advisor; currently, our projects include work on a multi-commodity max-flow min-cut theorem, collaborative work with <a href="https://crmj.wsu.edu/chair-faculty-graduate-students-and-staff/faculty/david-makin/">David Makin</a> on police integrity and uses of force, and generalizing the Mapper algorithm for use in, for example, recommendation systems. I received my bachelors degree from Linfield College (now  <a href="https://www.linfield.edu">Linfield University</a>) in the spring of 2013.
